--- a/viz.css
+++ b/viz.css
@@ -28,8 +28,8 @@ body .hed {
 
 .line {
   fill: none;
-  stroke: #7BD8F1;
-  stroke-width: 3px;
+  stroke: #FF5733;
+  stroke-width: 4px;
 }
 
 /*#chart1 .tooltip {
